# pytch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LiveFFTwithTuner2ChannelsAndPitchLog.py  README.md  TwoChannelTestbed.py  environment.yml  gui.py  prerequisites.txt  pyproject.toml  pytch_config.ini  requirements.txt  setup.py  two_channel_tuner.py
.github/workflows/: python-app.yml
apps/: pytch
paper/: compile.sh  paper.bib  paper.md
pytch/: __init__.py  audio.py  channel_mixer.py  cli.py  config.py  core.py  data.py  gui.py  gui_util.py  gui_util_opengl.py  gui_utils.py  kalman.py  keyboard.py  menu.py  plot.py  processing.py  two_channel_tuner.py  util.py  utils.py  viridis.py
src/: __init__.py  channel_mixer.py  config.py  core.py  data.py  gui.py  gui_qt4.py  gui_util.py  gui_util_opengl.py  kalman.py  keyboard.py  level_meter.py  menu.py  plot.py  processing.py  two_channel_tuner.py  util.py  viridis.py
test/: test_all.py  test_audio.py  test_buffer.py  test_gui.py  test_mic.py  test_util.py
