[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytch"
version = "0.1.3"
description = "Vocal Trainer"
authors = [
  {name = "Pytch Contributors"}
]
dependencies = [
    "cython>=3.0.0",
    "numpy>=1.25.2",
    "scipy>=1.11.1",
    "pyqt6>=6.7.0",
    "libf0>=1.0.2",
    "sounddevice>=0.4.7",
    "matplotlib>=3.7.2"
]
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pytch*"]

[project.scripts]
pytch = "pytch.cli:main"
