[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytch"
version = "2.3.0"
description = "A Real-Time Pitch Analysis Tool For Polyphonic Music"
authors = [
  {name = "Pytch Contributors"}
]
dependencies = [
    "cython>=3.0.0",
    "numpy>=1.25.2",
    "scipy>=1.11.1",
    "pyqt6>=6.7.0",
    "sounddevice>=0.4.7",
    "pyqtgraph>=0.13.1",
    "rtswipe@git+https://github.com/groupmm/real_time_swipe.git",
    "libf0>=1.1.0"
]
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pytch*"]

[tool.poetry.extras]
test = ["pytest"]

[project.scripts]
pytch = "pytch.cli:main"
